--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,56 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.app-component{
+    height: 80%;
+    width: 75%;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    margin: 3em 0 0 0;
+    gap: .5rem;
+    background-color: rgb(100, 137, 143);
+    padding: 1rem 0;
+    -webkit-box-shadow: 0px 0px 48px -15px rgba(178, 178, 178, 0.384);
+-moz-box-shadow: 0px 0px 48px -15px rgba(178, 178, 178, 0.384);
+box-shadow: 0px 0px 48px -15px rgba(178, 178, 178, 0.384);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.piano-controllers-container{
+    grid-column: 1/8;
+    grid-row: 1/5;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    background-color: rgb(78, 106, 110);
+    border-radius: 1.5rem;
+    padding: .5rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.piano-container{
+    grid-column: 4/7;
+    grid-row: 5/8;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.envolve-container{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    padding: 0 0 0 .5rem;
+    gap: .5rem;
+    border-bottom: 2px solid rgb(125, 125, 125);
+    border-right: 2px solid rgb(125, 125, 125);
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.delay-container{
+    border-right: 2px solid rgb(125, 125, 125);
+    grid-row: 2/4;
+    grid-column: 1/2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    padding: 0 0 0 .5rem;
+    gap: .3rem;
 }
