--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,21 @@
 .app-component{
-    height: 80%;
+    height: 85%;
     width: 75%;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(7, 1fr);
+    grid-template-rows: repeat(8, 1fr);
     margin: 3em 0 0 0;
     gap: .5rem;
-    background-color: rgb(100, 137, 143);
+    background-color: rgb(36, 71, 77);
     padding: 1rem 0;
-    -webkit-box-shadow: 0px 0px 48px -15px rgba(178, 178, 178, 0.384);
--moz-box-shadow: 0px 0px 48px -15px rgba(178, 178, 178, 0.384);
-box-shadow: 0px 0px 48px -15px rgba(178, 178, 178, 0.384);
+    -webkit-box-shadow: 0px 0px 48px -15px rgba(178, 178, 178, 0.668);
+-moz-box-shadow: 0px 0px 48px -15px rgba(178, 178, 178, 0.668);
+box-shadow: 0px 0px 48px -15px rgba(178, 178, 178, 0.668);
 }
 
 .piano-controllers-container{
     grid-column: 1/8;
-    grid-row: 1/5;
+    grid-row: 1/6;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -27,7 +27,7 @@ box-shadow: 0px 0px 48px -15px rgba(178, 178, 178, 0.384);
 
 .piano-container{
     grid-column: 4/7;
-    grid-row: 5/8;
+    grid-row: 6/9;
 }
 
 .envolve-container{
@@ -54,3 +54,102 @@ box-shadow: 0px 0px 48px -15px rgba(178, 178, 178, 0.384);
     padding: 0 0 0 .5rem;
     gap: .3rem;
 }
+
+
+
+.error-404-not-found-container{
+    grid-row: 1/4;
+    grid-column: 2/5;
+
+}
+
+.oscilator-container{
+    grid-row: 6/9;
+    grid-column: 1/4;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    gap: .5rem;
+}
+
+
+
+@media screen and (max-width: 1023px) {
+    .radio-waves-container{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .radio-waves-container label{
+        display: flex;
+        align-items: center;
+        padding: 1rem;
+    }
+    
+  }
+
+  @media screen and (max-width: 740px) {
+    .oscilator-container{
+        grid-row: 1/4;
+        grid-column: 3/8;
+    }
+
+    .error-404-not-found-container{
+        grid-row: 2/3;
+    }
+    .piano-container{
+        grid-column: 1/8;
+    }
+
+    @media screen and (max-width: 560px) {
+        .oscilator-container{
+            font-size: small;
+            gap: 0;
+        }
+  }
+
+  @media screen and (max-width: 520px) {
+    .error-404-not-found-container{
+        display: none;
+    }
+    .oscilator-container{
+        grid-row: 1/6;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .radio-waves-container{
+        display: block;
+    }
+}
+
+@media screen and (max-width: 347px) {
+    .piano-controllers-container{
+        grid-row: 1/4;
+        grid-column: 1/8;
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .piano-controllers-container .envolve-container, .piano-controllers-container .delay-container{
+        grid-row: 1/4;
+        grid-column: 1/8;
+        display: flex;
+        flex-direction: column;
+        border-right: none;
+    }
+    .oscilator-container{
+        grid-row: 4/6;
+        grid-column: 1/8;
+    }
+    .radio-waves-container{
+        display: flex;
+        overflow-x: auto;
+    }
+}
+
+}
+  
+
